features added and datasets updated

--- a/1.2_weather_cleaning.ipynb
+++ b/1.2_weather_cleaning.ipynb
@@ -1974,7 +1974,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2940 entries, 0 to 2943\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   station       2940 non-null   int64         \n",
+      " 1   date          2940 non-null   datetime64[ns]\n",
+      " 2   tmax          2940 non-null   int64         \n",
+      " 3   tmin          2940 non-null   int64         \n",
+      " 4   tavg          2940 non-null   object        \n",
+      " 5   depart        2940 non-null   object        \n",
+      " 6   dewpoint      2940 non-null   int64         \n",
+      " 7   wetbulb       2940 non-null   object        \n",
+      " 8   heat          2940 non-null   object        \n",
+      " 9   cool          2940 non-null   object        \n",
+      " 10  sunrise       2940 non-null   datetime64[ns]\n",
+      " 11  sunset        2940 non-null   datetime64[ns]\n",
+      " 12  preciptotal   2940 non-null   object        \n",
+      " 13  stnpressure   2940 non-null   object        \n",
+      " 14  sealevel      2940 non-null   object        \n",
+      " 15  resultspeed   2940 non-null   float64       \n",
+      " 16  resultdir     2940 non-null   int64         \n",
+      " 17  avgspeed      2940 non-null   object        \n",
+      " 18  year          2940 non-null   int64         \n",
+      " 19  month         2940 non-null   int64         \n",
+      " 20  day           2940 non-null   int64         \n",
+      " 21  daylightmins  2940 non-null   float64       \n",
+      "dtypes: datetime64[ns](3), float64(2), int64(8), object(9)\n",
+      "memory usage: 608.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "weather.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather['tavg'] = weather['tavg'].astype(float)\n",
+    "weather['depart'] = weather['depart'].astype(float)\n",
+    "weather['wetbulb'] = weather['wetbulb'].astype(float)\n",
+    "weather['heat'] = weather['heat'].astype(float)\n",
+    "weather['cool'] = weather['cool'].astype(float)\n",
+    "weather['preciptotal'] = weather['preciptotal'].astype(float)\n",
+    "weather['stnpressure'] = weather['stnpressure'].astype(float)\n",
+    "weather['sealevel'] = weather['sealevel'].astype(float)\n",
+    "weather['resultspeed'] = weather['resultspeed'].astype(float)\n",
+    "weather['avgspeed'] = weather['avgspeed'].astype(float)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather['tminsq'] = weather['tmin'] ** 2\n",
+    "weather['tmaxsq'] = weather['tmax'] ** 2\n",
+    "weather['tavgsq'] = weather['tavg'] ** 2\n",
+    "weather['departsq'] = weather['depart'] ** 2\n",
+    "weather['wetbulbsq'] = weather['wetbulb'] ** 2\n",
+    "weather['heatsq'] = weather['heat'] ** 2\n",
+    "weather['coolsq'] = weather['cool'] ** 2\n",
+    "weather['preciptotalsq'] = weather['preciptotal'] ** 2\n",
+    "weather['resultspeedsq'] = weather['resultspeed'] ** 2\n",
+    "weather['resultdirsq'] = weather['resultdir'] ** 2\n",
+    "weather['avgspeedsq'] = weather['avgspeed'] ** 2\n",
+    "weather['daylightminssq'] = weather['daylightmins'] ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>tmax</th>\n",
+       "      <th>tmin</th>\n",
+       "      <th>tavg</th>\n",
+       "      <th>depart</th>\n",
+       "      <th>dewpoint</th>\n",
+       "      <th>wetbulb</th>\n",
+       "      <th>heat</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tavgsq</th>\n",
+       "      <th>departsq</th>\n",
+       "      <th>wetbulbsq</th>\n",
+       "      <th>heatsq</th>\n",
+       "      <th>coolsq</th>\n",
+       "      <th>preciptotalsq</th>\n",
+       "      <th>resultspeedsq</th>\n",
+       "      <th>resultdirsq</th>\n",
+       "      <th>avgspeedsq</th>\n",
+       "      <th>daylightminssq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2007-05-01</td>\n",
+       "      <td>83</td>\n",
+       "      <td>50</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4489.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>3136.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.89</td>\n",
+       "      <td>729</td>\n",
+       "      <td>84.64</td>\n",
+       "      <td>707281.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2007-05-01</td>\n",
+       "      <td>84</td>\n",
+       "      <td>52</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4624.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>3249.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.29</td>\n",
+       "      <td>625</td>\n",
+       "      <td>92.16</td>\n",
+       "      <td>707281.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2007-05-02</td>\n",
+       "      <td>59</td>\n",
+       "      <td>42</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2601.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2209.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>169.00</td>\n",
+       "      <td>16</td>\n",
+       "      <td>179.56</td>\n",
+       "      <td>710649.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2007-05-02</td>\n",
+       "      <td>60</td>\n",
+       "      <td>43</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2704.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2209.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>176.89</td>\n",
+       "      <td>4</td>\n",
+       "      <td>179.56</td>\n",
+       "      <td>710649.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2007-05-03</td>\n",
+       "      <td>66</td>\n",
+       "      <td>46</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3136.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2304.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>136.89</td>\n",
+       "      <td>49</td>\n",
+       "      <td>141.61</td>\n",
+       "      <td>714025.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   station       date  tmax  tmin  tavg  depart  dewpoint  wetbulb  heat  \\\n",
+       "0        1 2007-05-01    83    50  67.0    14.0        51     56.0   0.0   \n",
+       "1        2 2007-05-01    84    52  68.0    14.0        51     57.0   0.0   \n",
+       "2        1 2007-05-02    59    42  51.0    -3.0        42     47.0  14.0   \n",
+       "3        2 2007-05-02    60    43  52.0    -3.0        42     47.0  13.0   \n",
+       "4        1 2007-05-03    66    46  56.0     2.0        40     48.0   9.0   \n",
+       "\n",
+       "   cool  ...  tavgsq departsq  wetbulbsq  heatsq  coolsq  preciptotalsq  \\\n",
+       "0   2.0  ...  4489.0    196.0     3136.0     0.0     4.0            0.0   \n",
+       "1   3.0  ...  4624.0    196.0     3249.0     0.0     9.0            0.0   \n",
+       "2   0.0  ...  2601.0      9.0     2209.0   196.0     0.0            0.0   \n",
+       "3   0.0  ...  2704.0      9.0     2209.0   169.0     0.0            0.0   \n",
+       "4   0.0  ...  3136.0      4.0     2304.0    81.0     0.0            0.0   \n",
+       "\n",
+       "   resultspeedsq  resultdirsq  avgspeedsq  daylightminssq  \n",
+       "0           2.89          729       84.64        707281.0  \n",
+       "1           7.29          625       92.16        707281.0  \n",
+       "2         169.00           16      179.56        710649.0  \n",
+       "3         176.89            4      179.56        710649.0  \n",
+       "4         136.89           49      141.61        714025.0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {
     "cell_id": "00022-bb9bb847-780a-41bd-8a63-eb286ff1e756",
     "deepnote_cell_type": "code",
