--- a/1.1_train_cleaning.ipynb
+++ b/1.1_train_cleaning.ipynb
@@ -399,8 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.drop(columns = ['Street','Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)\n",
-    "test.drop(columns = ['Street','Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)"
+    "train.drop(columns = ['Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)\n",
+    "test.drop(columns = ['Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)"
    ]
   },
   {
@@ -431,6 +431,7 @@
        "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>Species</th>\n",
+       "      <th>Street</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>NumMosquitos</th>\n",
@@ -442,6 +443,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -451,6 +453,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -460,6 +463,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
        "      <td>1</td>\n",
@@ -469,6 +473,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>1</td>\n",
@@ -478,6 +483,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>4</td>\n",
@@ -488,19 +494,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        Date                 Species   Latitude  Longitude  NumMosquitos  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS  41.954690 -87.800991             1   \n",
-       "1 2007-05-29          CULEX RESTUANS  41.954690 -87.800991             1   \n",
-       "2 2007-05-29          CULEX RESTUANS  41.994991 -87.769279             1   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS  41.974089 -87.824812             1   \n",
-       "4 2007-05-29          CULEX RESTUANS  41.974089 -87.824812             4   \n",
+       "        Date                 Species           Street   Latitude  Longitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
        "\n",
-       "   WnvPresent  \n",
-       "0           0  \n",
-       "1           0  \n",
-       "2           0  \n",
-       "3           0  \n",
-       "4           0  "
+       "   NumMosquitos  WnvPresent  \n",
+       "0             1           0  \n",
+       "1             1           0  \n",
+       "2             1           0  \n",
+       "3             1           0  \n",
+       "4             4           0  "
       ]
      },
      "execution_count": 10,
@@ -550,6 +556,7 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>species</th>\n",
+       "      <th>street</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>nummosquitos</th>\n",
@@ -561,6 +568,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -570,6 +578,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -579,6 +588,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
        "      <td>1</td>\n",
@@ -588,6 +598,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>1</td>\n",
@@ -597,6 +608,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>4</td>\n",
@@ -607,19 +619,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        date                 species   latitude  longitude  nummosquitos  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS  41.954690 -87.800991             1   \n",
-       "1 2007-05-29          CULEX RESTUANS  41.954690 -87.800991             1   \n",
-       "2 2007-05-29          CULEX RESTUANS  41.994991 -87.769279             1   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS  41.974089 -87.824812             1   \n",
-       "4 2007-05-29          CULEX RESTUANS  41.974089 -87.824812             4   \n",
+       "        date                 species           street   latitude  longitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
        "\n",
-       "   wnvpresent  \n",
-       "0           0  \n",
-       "1           0  \n",
-       "2           0  \n",
-       "3           0  \n",
-       "4           0  "
+       "   nummosquitos  wnvpresent  \n",
+       "0             1           0  \n",
+       "1             1           0  \n",
+       "2             1           0  \n",
+       "3             1           0  \n",
+       "4             4           0  "
       ]
      },
      "execution_count": 12,
@@ -675,6 +687,7 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>species</th>\n",
+       "      <th>street</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>nummosquitos</th>\n",
@@ -689,6 +702,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -701,6 +715,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
        "      <td>1</td>\n",
@@ -713,6 +728,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
        "      <td>1</td>\n",
@@ -725,6 +741,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>1</td>\n",
@@ -737,6 +754,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
        "      <td>4</td>\n",
@@ -750,19 +768,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        date                 species   latitude  longitude  nummosquitos  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS  41.954690 -87.800991             1   \n",
-       "1 2007-05-29          CULEX RESTUANS  41.954690 -87.800991             1   \n",
-       "2 2007-05-29          CULEX RESTUANS  41.994991 -87.769279             1   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS  41.974089 -87.824812             1   \n",
-       "4 2007-05-29          CULEX RESTUANS  41.974089 -87.824812             4   \n",
+       "        date                 species           street   latitude  longitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
+       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
        "\n",
-       "   wnvpresent  year  month  day  \n",
-       "0           0  2007      5   29  \n",
-       "1           0  2007      5   29  \n",
-       "2           0  2007      5   29  \n",
-       "3           0  2007      5   29  \n",
-       "4           0  2007      5   29  "
+       "   nummosquitos  wnvpresent  year  month  day  \n",
+       "0             1           0  2007      5   29  \n",
+       "1             1           0  2007      5   29  \n",
+       "2             1           0  2007      5   29  \n",
+       "3             1           0  2007      5   29  \n",
+       "4             4           0  2007      5   29  "
       ]
      },
      "execution_count": 14,
