--- a/1.2_weather_cleaning.ipynb
+++ b/1.2_weather_cleaning.ipynb
@@ -2032,9 +2032,7 @@
     "weather['stnpressure'] = weather['stnpressure'].astype(float)\n",
     "weather['sealevel'] = weather['sealevel'].astype(float)\n",
     "weather['resultspeed'] = weather['resultspeed'].astype(float)\n",
-    "weather['avgspeed'] = weather['avgspeed'].astype(float)\n",
-    "\n",
-    "\n"
+    "weather['avgspeed'] = weather['avgspeed'].astype(float)"
    ]
   },
   {
