addcomments and EDA

--- a/2.2_EDA_weather.ipynb
+++ b/2.2_EDA_weather.ipynb
@@ -1645,14 +1645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation:** \n",
-    "The following has direct effect to the mosquito counts.\n",
-    "1. Tavg shows between 78F and 84F \n",
-    "2. Percipitotal in 0.5 inches.\n",
-    "3. Dewpoint less than 38F\n",
-    "4. Higher windspeed 14mph\n",
-    "5. Daylightmins longer 770mins\n",
-    "6. weltbulb higher around 66F."
+    "__Observation__:  The average number of mosquitos seems to be positively correlated to average temperature and inverseley correlated to amount of precipitation.  It also seems to follow a standard distribution based on the amount of daylight.  No visible relationship could be discerned with the other features."
    ]
   },
   {
@@ -1683,7 +1676,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Observation:** Higher temperature may lead to higher quantities of mosquito breed, but does not imply higher rate of WNV presence."
+   ]
   },
   {
    "cell_type": "code",
