--- a/1.1_train_cleaning.ipynb
+++ b/1.1_train_cleaning.ipynb
@@ -2,25 +2,83 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the Centers for Disease Control and Prevention, the West Nile Virus (WNV) is a viral infection transmitted across humans through the bite of an infected mosquito. Mosquitoes first become infected when they feed on birds. 1 in 5 people who become infected with the virus develop a fever along with other symptoms such as body aches, rashes and diarrhea. About 1 in 150 people develop a serious illness that affects the central nervous system.\n",
+    "\n",
+    "Our project aims to answer below problem statements:\n",
+    "\n",
+    "1. Predict the occurrence of presence of West Nile Virus given weather, location, testing and spray data\n",
+    "2. Analyze to see if there are main predictors reasons to the West Nile Virus\n",
+    "3. Recommendations on best practices to how to reduce human contraction of the virus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the Centers for Disease Control and Prevention, the West Nile Virus (WNV) is a viral infection transmitted across humans through the bite of an infected mosquito. Mosquitoes first become infected when they feed on birds. 1 in 5 people who become infected with the virus develop a fever along with other symptoms such as body aches, rashes and diarrhea. About 1 in 150 people develop a serious illness that affects the central nervous system.\n",
+    "\n",
+    "Kaggle launched a competition with a $40,000 prize money back in 2015 to predict West Nile Virus in mosquitoes across the city of Chicago. Though the competition has already ended, we're working on our own version of model on the same problem set as part of our Machine Learning curriculum with General Assembly. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Feature Name | Data Type | Description |\n",
+    "| ----| ---- | ---- |\n",
+    "| date | datetime64 | YYYY-MM-DD |\n",
+    "| nummosquitos | int | number of mosquitos caught in the trap |\n",
+    "| tavg | float | daily average temperature (F) |\n",
+    "| tmax | float | daily maximum temperature (F)|\n",
+    "| tmin | float | daily minimum temperature (F)|\n",
+    "| preciptotal | float | preciptation (inches) |\n",
+    "| avgspeed | int | average wind speed (mph) |\n",
+    "| resultspeed | int | resultant wind speed taking into account direction (mph) |\n",
+    "| resultdir | int | direction of wind (deg) |\n",
+    "| dewpoint | float | dewpoint temperature (F)|\n",
+    "| latitude | float | latitude from Geocoder|\n",
+    "| longitude | float | longitude from Geocoder|\n",
+    "| stnpressure | float | average daily station pressure|\n",
+    "| sealevel | float | average daily sealevel pressure|\n",
+    "| daylightmins | int | total number of minutes of daylight|\n",
+    "| year | int | year|\n",
+    "| month | int | month|\n",
+    "| day | int | day|\n",
+    "| wnvpresent | int | dummified value representing presence of WNV.  1 = Present, 0 = Not Present|\n",
+    "| species_X | int | dummified value representing presence of species_X in trap. 1 = Present, 0 = Not Present|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "cell_id": "00000-b8a47c5e-c31a-44dc-ba2b-6a913a046dba",
     "deepnote_cell_type": "markdown"
    },
    "source": [
     "# 01_DataCleaning\n",
-    "\n",
-    "\n",
-    "#### Problem statement recap (placeholder) \n",
-    "<font color = 'red'>  According to the Centers for Disease Control and Prevention, the West Nile Virus (WNV) is a viral infection transmitted across humans through the bite of an infected mosquito. Mosquitoes first become infected when they feed on birds. 1 in 5 people who become infected with the virus develop a fever along with other symptoms such as body aches, rashes and diarrhea. About 1 in 150 people develop a serious illness that affects the central nervous system.\n",
-    "\n",
-    "Kaggle launched a competition with a $40,000 prize money back in 2015 to predict West Nile Virus in mosquitoes across the city of Chicago. Though the competition has already ended, we're working on our own version of model on the same problem set as part of our Machine Learning curriculum with General Assembly. \n",
-    "\n",
-    "Our project aims to answer below problem statements:\n",
-    "\n",
-    "1. Predict the occurrence of presence of West Nile Virus given weather, location, testing and spray data\n",
-    "2. Analyze to see if there are main predictors reasons to the West Nile Virus\n",
-    "3. Recommendations on best practices to how to reduce human contraction of the virus\n",
-    "</font>\n",
     "\n",
     "#### Data cleaning\n",
     "\n",
