--- a/2.1_EDA_train.ipynb
+++ b/2.1_EDA_train.ipynb
@@ -1019,6 +1019,13 @@
     "plt.ylabel('Mosquito Species')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Interpretation: Culex Erraticus,m Cules Salinarius, Cules Tarsalis, Culex Territans are species that does not show any presence in WNV, whereas Culex Pipiens has the highest exposure with 0.5% of the caught numbers carry WNV. All non carrying WNV mosquitos species will be categorised as Others.*"
+   ]
   }
  ],
  "metadata": {
