added features for moving average, best model submission

--- a/code/1.1_train_cleaning.ipynb
+++ b/code/1.1_train_cleaning.ipynb
@@ -457,8 +457,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.drop(columns = ['Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)\n",
-    "test.drop(columns = ['Block','AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)"
+    "train.drop(columns = ['AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)\n",
+    "test.drop(columns = ['AddressNumberAndStreet','Address','Trap','AddressAccuracy'], inplace = True)"
    ]
   },
   {
@@ -489,6 +489,7 @@
        "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>Species</th>\n",
+       "      <th>Block</th>\n",
        "      <th>Street</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -501,6 +502,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -511,6 +513,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -521,6 +524,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>62</td>\n",
        "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
@@ -531,6 +535,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -541,6 +546,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -552,19 +558,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        Date                 Species           Street   Latitude  Longitude  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
-       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "        Date                 Species  Block           Street   Latitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "1 2007-05-29          CULEX RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "2 2007-05-29          CULEX RESTUANS     62    N MANDELL AVE  41.994991   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     79     W FOSTER AVE  41.974089   \n",
+       "4 2007-05-29          CULEX RESTUANS     79     W FOSTER AVE  41.974089   \n",
        "\n",
-       "   NumMosquitos  WnvPresent  \n",
-       "0             1           0  \n",
-       "1             1           0  \n",
-       "2             1           0  \n",
-       "3             1           0  \n",
-       "4             4           0  "
+       "   Longitude  NumMosquitos  WnvPresent  \n",
+       "0 -87.800991             1           0  \n",
+       "1 -87.800991             1           0  \n",
+       "2 -87.769279             1           0  \n",
+       "3 -87.824812             1           0  \n",
+       "4 -87.824812             4           0  "
       ]
      },
      "execution_count": 10,
@@ -614,6 +620,7 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>species</th>\n",
+       "      <th>block</th>\n",
        "      <th>street</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
@@ -626,6 +633,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -636,6 +644,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -646,6 +655,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>62</td>\n",
        "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
@@ -656,6 +666,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -666,6 +677,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -677,19 +689,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        date                 species           street   latitude  longitude  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
-       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "        date                 species  block           street   latitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "1 2007-05-29          CULEX RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "2 2007-05-29          CULEX RESTUANS     62    N MANDELL AVE  41.994991   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     79     W FOSTER AVE  41.974089   \n",
+       "4 2007-05-29          CULEX RESTUANS     79     W FOSTER AVE  41.974089   \n",
        "\n",
-       "   nummosquitos  wnvpresent  \n",
-       "0             1           0  \n",
-       "1             1           0  \n",
-       "2             1           0  \n",
-       "3             1           0  \n",
-       "4             4           0  "
+       "   longitude  nummosquitos  wnvpresent  \n",
+       "0 -87.800991             1           0  \n",
+       "1 -87.800991             1           0  \n",
+       "2 -87.769279             1           0  \n",
+       "3 -87.824812             1           0  \n",
+       "4 -87.824812             4           0  "
       ]
      },
      "execution_count": 12,
@@ -745,6 +757,7 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>species</th>\n",
+       "      <th>block</th>\n",
        "      <th>street</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
@@ -760,6 +773,7 @@
        "      <th>0</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -773,6 +787,7 @@
        "      <th>1</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>41</td>\n",
        "      <td>N OAK PARK AVE</td>\n",
        "      <td>41.954690</td>\n",
        "      <td>-87.800991</td>\n",
@@ -786,6 +801,7 @@
        "      <th>2</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>62</td>\n",
        "      <td>N MANDELL AVE</td>\n",
        "      <td>41.994991</td>\n",
        "      <td>-87.769279</td>\n",
@@ -799,6 +815,7 @@
        "      <th>3</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX PIPIENS/RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -812,6 +829,7 @@
        "      <th>4</th>\n",
        "      <td>2007-05-29</td>\n",
        "      <td>CULEX RESTUANS</td>\n",
+       "      <td>79</td>\n",
        "      <td>W FOSTER AVE</td>\n",
        "      <td>41.974089</td>\n",
        "      <td>-87.824812</td>\n",
@@ -826,19 +844,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        date                 species           street   latitude  longitude  \\\n",
-       "0 2007-05-29  CULEX PIPIENS/RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "1 2007-05-29          CULEX RESTUANS   N OAK PARK AVE  41.954690 -87.800991   \n",
-       "2 2007-05-29          CULEX RESTUANS    N MANDELL AVE  41.994991 -87.769279   \n",
-       "3 2007-05-29  CULEX PIPIENS/RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
-       "4 2007-05-29          CULEX RESTUANS     W FOSTER AVE  41.974089 -87.824812   \n",
+       "        date                 species  block           street   latitude  \\\n",
+       "0 2007-05-29  CULEX PIPIENS/RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "1 2007-05-29          CULEX RESTUANS     41   N OAK PARK AVE  41.954690   \n",
+       "2 2007-05-29          CULEX RESTUANS     62    N MANDELL AVE  41.994991   \n",
+       "3 2007-05-29  CULEX PIPIENS/RESTUANS     79     W FOSTER AVE  41.974089   \n",
+       "4 2007-05-29          CULEX RESTUANS     79     W FOSTER AVE  41.974089   \n",
        "\n",
-       "   nummosquitos  wnvpresent  year  month  day  \n",
-       "0             1           0  2007      5   29  \n",
-       "1             1           0  2007      5   29  \n",
-       "2             1           0  2007      5   29  \n",
-       "3             1           0  2007      5   29  \n",
-       "4             4           0  2007      5   29  "
+       "   longitude  nummosquitos  wnvpresent  year  month  day  \n",
+       "0 -87.800991             1           0  2007      5   29  \n",
+       "1 -87.800991             1           0  2007      5   29  \n",
+       "2 -87.769279             1           0  2007      5   29  \n",
+       "3 -87.824812             1           0  2007      5   29  \n",
+       "4 -87.824812             4           0  2007      5   29  "
       ]
      },
      "execution_count": 14,
@@ -852,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "cell_id": "00128-880b2f42-2f02-4b5e-aa84-1d940c1480ca",
     "deepnote_cell_type": "code",
