--- a/code/1.2_weather_cleaning.ipynb
+++ b/code/1.2_weather_cleaning.ipynb
@@ -1221,11 +1221,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jean/miniconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1637: SettingWithCopyWarning: \n",
+      "/Users/allenlim/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_block(indexer, value, name)\n"
+      "  iloc._setitem_with_indexer(indexer, value)\n"
      ]
     }
    ],
@@ -1551,8 +1551,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-23-9e42af94a168>:12: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  row['preciptotal'] = weather[weather.preciptotal != 'M'][weather.preciptotal != '  T'].preciptotal.median()\n",
       "<ipython-input-23-9e42af94a168>:12: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  row['preciptotal'] = weather[weather.preciptotal != 'M'][weather.preciptotal != '  T'].preciptotal.median()\n"
      ]
@@ -2011,7 +2009,7 @@
       " 20  day           2940 non-null   int64         \n",
       " 21  daylightmins  2940 non-null   float64       \n",
       "dtypes: datetime64[ns](3), float64(2), int64(8), object(9)\n",
-      "memory usage: 592.8+ KB\n"
+      "memory usage: 608.3+ KB\n"
      ]
     }
    ],
@@ -2060,6 +2058,42 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather['tmin_sma_3'] = weather['tmin'].rolling(3,min_periods=1).mean()\n",
+    "weather['tmax_sma_3'] = weather['tmax'].rolling(3,min_periods=1).mean()\n",
+    "weather['tavg_sma_3'] = weather['tavg'].rolling(3,min_periods=1).mean()\n",
+    "\n",
+    "weather['tmin_sma_7'] = weather['tmin'].rolling(7,min_periods=1).mean()\n",
+    "weather['tmax_sma_7'] = weather['tmax'].rolling(7,min_periods=1).mean()\n",
+    "weather['tavg_sma_7'] = weather['tavg'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['daylightmin_sma_3'] = weather['daylightmins'].rolling(3,min_periods=1).mean()\n",
+    "weather['daylightmin_sma_7'] = weather['daylightmins'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['avgspeed_sma_3'] = weather['avgspeed'].rolling(3,min_periods=1).mean()\n",
+    "weather['avgspeed_sma_7'] = weather['avgspeed'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['resultspeed_sma_3'] = weather['resultspeed'].rolling(3,min_periods=1).mean()\n",
+    "weather['resultspeed_sma_7'] = weather['resultspeed'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['stnpressure_sma_3'] = weather['stnpressure'].rolling(3,min_periods=1).mean()\n",
+    "weather['stnpressure_sma_7'] = weather['stnpressure'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['heat_sma_3'] = weather['heat'].rolling(3,min_periods=1).mean()\n",
+    "weather['heat_sma_7'] = weather['heat'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['cool_sma_3'] = weather['cool'].rolling(3,min_periods=1).mean()\n",
+    "weather['cool_sma_7'] = weather['cool'].rolling(7,min_periods=1).mean()\n",
+    "\n",
+    "weather['wetbulb_sma_3'] = weather['wetbulb'].rolling(3,min_periods=1).mean()\n",
+    "weather['wetbulb_sma_7'] = weather['wetbulb'].rolling(7,min_periods=1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -2096,16 +2130,16 @@
        "      <th>heat</th>\n",
        "      <th>cool</th>\n",
        "      <th>...</th>\n",
-       "      <th>tavgsq</th>\n",
-       "      <th>departsq</th>\n",
-       "      <th>wetbulbsq</th>\n",
-       "      <th>heatsq</th>\n",
-       "      <th>coolsq</th>\n",
-       "      <th>preciptotalsq</th>\n",
-       "      <th>resultspeedsq</th>\n",
-       "      <th>resultdirsq</th>\n",
-       "      <th>avgspeedsq</th>\n",
-       "      <th>daylightminssq</th>\n",
+       "      <th>resultspeed_sma_3</th>\n",
+       "      <th>resultspeed_sma_7</th>\n",
+       "      <th>stnpressure_sma_3</th>\n",
+       "      <th>stnpressure_sma_7</th>\n",
+       "      <th>heat_sma_3</th>\n",
+       "      <th>heat_sma_7</th>\n",
+       "      <th>cool_sma_3</th>\n",
+       "      <th>cool_sma_7</th>\n",
+       "      <th>wetbulb_sma_3</th>\n",
+       "      <th>wetbulb_sma_7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2122,16 +2156,16 @@
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4489.0</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>3136.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.89</td>\n",
-       "      <td>729</td>\n",
-       "      <td>84.64</td>\n",
-       "      <td>707281.0</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>1.700</td>\n",
+       "      <td>29.100000</td>\n",
+       "      <td>29.100</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>56.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2146,16 +2180,16 @@
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4624.0</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>3249.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.29</td>\n",
-       "      <td>625</td>\n",
-       "      <td>92.16</td>\n",
-       "      <td>707281.0</td>\n",
+       "      <td>2.200000</td>\n",
+       "      <td>2.200</td>\n",
+       "      <td>29.140000</td>\n",
+       "      <td>29.140</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>56.500000</td>\n",
+       "      <td>56.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2170,16 +2204,16 @@
        "      <td>14.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>2601.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2209.0</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>169.00</td>\n",
-       "      <td>16</td>\n",
-       "      <td>179.56</td>\n",
-       "      <td>710649.0</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>5.800</td>\n",
+       "      <td>29.220000</td>\n",
+       "      <td>29.220</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>53.333333</td>\n",
+       "      <td>53.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2194,16 +2228,16 @@
        "      <td>13.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>2704.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2209.0</td>\n",
-       "      <td>169.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>176.89</td>\n",
-       "      <td>4</td>\n",
-       "      <td>179.56</td>\n",
-       "      <td>710649.0</td>\n",
+       "      <td>9.666667</td>\n",
+       "      <td>7.675</td>\n",
+       "      <td>29.333333</td>\n",
+       "      <td>29.275</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>6.750000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>50.333333</td>\n",
+       "      <td>51.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2218,20 +2252,20 @@
        "      <td>9.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3136.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2304.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>136.89</td>\n",
-       "      <td>49</td>\n",
-       "      <td>141.61</td>\n",
-       "      <td>714025.0</td>\n",
+       "      <td>12.666667</td>\n",
+       "      <td>8.480</td>\n",
+       "      <td>29.403333</td>\n",
+       "      <td>29.298</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>47.333333</td>\n",
+       "      <td>51.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
+       "<p>5 rows × 54 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2242,24 +2276,31 @@
        "3        2 2007-05-02    60    43  52.0    -3.0        42     47.0  13.0   \n",
        "4        1 2007-05-03    66    46  56.0     2.0        40     48.0   9.0   \n",
        "\n",
-       "   cool  ...  tavgsq departsq  wetbulbsq  heatsq  coolsq  preciptotalsq  \\\n",
-       "0   2.0  ...  4489.0    196.0     3136.0     0.0     4.0            0.0   \n",
-       "1   3.0  ...  4624.0    196.0     3249.0     0.0     9.0            0.0   \n",
-       "2   0.0  ...  2601.0      9.0     2209.0   196.0     0.0            0.0   \n",
-       "3   0.0  ...  2704.0      9.0     2209.0   169.0     0.0            0.0   \n",
-       "4   0.0  ...  3136.0      4.0     2304.0    81.0     0.0            0.0   \n",
+       "   cool  ... resultspeed_sma_3 resultspeed_sma_7  stnpressure_sma_3  \\\n",
+       "0   2.0  ...          1.700000             1.700          29.100000   \n",
+       "1   3.0  ...          2.200000             2.200          29.140000   \n",
+       "2   0.0  ...          5.800000             5.800          29.220000   \n",
+       "3   0.0  ...          9.666667             7.675          29.333333   \n",
+       "4   0.0  ...         12.666667             8.480          29.403333   \n",
        "\n",
-       "   resultspeedsq  resultdirsq  avgspeedsq  daylightminssq  \n",
-       "0           2.89          729       84.64        707281.0  \n",
-       "1           7.29          625       92.16        707281.0  \n",
-       "2         169.00           16      179.56        710649.0  \n",
-       "3         176.89            4      179.56        710649.0  \n",
-       "4         136.89           49      141.61        714025.0  \n",
+       "   stnpressure_sma_7  heat_sma_3  heat_sma_7  cool_sma_3  cool_sma_7  \\\n",
+       "0             29.100    0.000000    0.000000    2.000000    2.000000   \n",
+       "1             29.140    0.000000    0.000000    2.500000    2.500000   \n",
+       "2             29.220    4.666667    4.666667    1.666667    1.666667   \n",
+       "3             29.275    9.000000    6.750000    1.000000    1.250000   \n",
+       "4             29.298   12.000000    7.200000    0.000000    1.000000   \n",
        "\n",
-       "[5 rows x 34 columns]"
+       "   wetbulb_sma_3  wetbulb_sma_7  \n",
+       "0      56.000000      56.000000  \n",
+       "1      56.500000      56.500000  \n",
+       "2      53.333333      53.333333  \n",
+       "3      50.333333      51.750000  \n",
+       "4      47.333333      51.000000  \n",
+       "\n",
+       "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
