updated with new features

--- a/code/1.2_weather_cleaning.ipynb
+++ b/code/1.2_weather_cleaning.ipynb
@@ -2052,6 +2052,8 @@
     "weather['resultspeedsq'] = weather['resultspeed'] ** 2\n",
     "weather['resultdirsq'] = weather['resultdir'] ** 2\n",
     "weather['avgspeedsq'] = weather['avgspeed'] ** 2\n",
+    "weather['stnpressuresq'] = weather['stnpressure'] ** 2\n",
+    "weather['sealevelsq'] = weather['sealevel'] ** 2\n",
     "weather['daylightminssq'] = weather['daylightmins'] ** 2"
    ]
   },
@@ -2265,7 +2267,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 54 columns</p>\n",
+       "<p>5 rows × 56 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2297,7 +2299,7 @@
        "3      50.333333      51.750000  \n",
        "4      47.333333      51.000000  \n",
        "\n",
-       "[5 rows x 54 columns]"
+       "[5 rows x 56 columns]"
       ]
      },
      "execution_count": 42,
