--- a/code/2.3_EDA_spray.ipynb
+++ b/code/2.3_EDA_spray.ipynb
@@ -551,10 +551,11 @@
    "source": [
     "crs = {'init':'epsg:4326'}\n",
     "\n",
+    "#create geodf for train\n",
     "geometry_train = [Point(xy) for xy in zip(train['longitude'], train ['latitude'])]\n",
     "geo_train_df = gpd.GeoDataFrame(train,crs=crs, geometry = geometry_train)\n",
     "\n",
-    "\n",
+    "#create geodf for spray\n",
     "geometry_spray =[Point(xy) for xy in zip(spray['longitude'],spray['latitude'])]\n",
     "geo_spray_df = gpd.GeoDataFrame(spray, crs=crs, geometry = geometry_spray)\n",
     "\n"
