deleted certain files

--- a/code/1.2_weather_cleaning.ipynb
+++ b/code/1.2_weather_cleaning.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {
     "cell_id": "00002-dd7a47b1-6a51-4190-9cb1-2316dcb2ed53",
     "deepnote_cell_type": "code",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {
     "cell_id": "00003-ca558dde-f18b-4c06-ad15-c59be26cf12b",
     "deepnote_cell_type": "code",
@@ -258,7 +258,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {
     "cell_id": "00004-9a02ca0c-50ad-49ee-b554-a88986705f94",
     "deepnote_cell_type": "code",
@@ -283,21 +283,17 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Station', 'Date', 'Tmax', 'Tmin', 'Tavg', 'Depart', 'DewPoint',\n",
-       "       'WetBulb', 'Heat', 'Cool', 'Sunrise', 'Sunset', 'CodeSum', 'Depth',\n",
-       "       'Water1', 'SnowFall', 'PrecipTotal', 'StnPressure', 'SeaLevel',\n",
-       "       'ResultSpeed', 'ResultDir', 'AvgSpeed'],\n",
-       "      dtype='object')"
+       "(2944, 22)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#check column names\n",
-    "weather.columns"
+    "weather.shape"
    ]
   },
   {
